# where-did-my-day-go

./: .gitignore  README.md  collector.py  com.user.activitymonitor.plist  com.user.wheredidmydaygo.plist  db.py  install_launchd.sh  probe.py  pyproject.toml  requirements.txt  server.py  start_collector.sh  start_server.sh  uninstall.sh
static/: app.js  styles.css
templates/: dashboard.html
